Build WinCairo (XP) using CMake.

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -3218,6 +3218,13 @@ if (WebCore_OUTPUT_NAME)
 endif ()
 
 if (SHARED_CORE)
+    if (WebCore_LINK_FLAGS)
+        add_target_properties(WebCore LINK_FLAGS "${WebCore_LINK_FLAGS}")
+    endif ()
     set_target_properties(WebCore PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION_MAJOR})
     install(TARGETS WebCore DESTINATION "${LIB_INSTALL_DIR}")
+else ()
+    if (WebCore_LINK_FLAGS)
+        add_target_properties(WebCore STATIC_LIBRARY_FLAGS "${WebCore_LINK_FLAGS}")
+    endif ()
 endif ()
