--- a/Source/WebKit/CMakeLists.txt
+++ b/Source/WebKit/CMakeLists.txt
@@ -89,6 +89,21 @@ target_link_libraries(WebKit ${WebKit_LIBRARIES})
 set_target_properties(WebKit PROPERTIES FOLDER "WebKit")
 set_target_properties(WebKit PROPERTIES LINK_INTERFACE_LIBRARIES "")
 
+if (ForwardingHeaders_NAME)
+    add_dependencies(WebKit ${ForwardingHeaders_NAME})
+    if (ForwardingFoundationHeaders_NAME)
+        add_dependencies(WebKit ${ForwardingFoundationHeaders_NAME})
+        add_dependencies(${ForwardingFoundationHeaders_NAME} ${ForwardingHeaders_NAME})
+    endif ()
+    if (ForwardingNetworkHeaders_NAME)
+        add_dependencies(WebKit ${ForwardingNetworkHeaders_NAME})
+        add_dependencies(${ForwardingNetworkHeaders_NAME} ${ForwardingHeaders_NAME})
+        if (ForwardingFoundationHeaders_NAME)
+            add_dependencies(${ForwardingNetworkHeaders_NAME} ${ForwardingFoundationHeaders_NAME})
+        endif ()
+    endif()
+endif()
+
 if (WebKit_LINK_FLAGS)
     ADD_TARGET_PROPERTIES(WebKit LINK_FLAGS "${WebKit_LINK_FLAGS}")
 endif ()
