--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -21,6 +21,9 @@ elseif ("${PORT}" STREQUAL "GTK")
     endif ()
 elseif ("${PORT}" STREQUAL "WinCE")
     add_subdirectory(WinCELauncher)
+elseif ("${PORT}" STREQUAL "Win")
+    add_subdirectory(WinLauncher)
+    add_subdirectory(win/DLLLauncher)
 endif ()
 
 if (ENABLE_WEBKIT2 AND ENABLE_API_TESTS)
