--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -23,7 +23,9 @@ elseif ("${PORT}" STREQUAL "WinCE")
     add_subdirectory(WinCELauncher)
 elseif ("${PORT}" STREQUAL "Win")
     add_subdirectory(WinLauncher)
-    add_subdirectory(win/DLLLauncher)
+    if (NOT BUILD_WIN_LAUNCHER_AS_EXE)
+        add_subdirectory(win/DLLLauncher)
+    endif ()
 endif ()
 
 if (ENABLE_WEBKIT2 AND ENABLE_API_TESTS)
