Add support for compiling without plugins enabled.

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -2088,13 +2088,9 @@ set(WebCore_SOURCES
     plugins/DOMMimeType.cpp
     plugins/DOMPluginArray.cpp
     plugins/DOMPlugin.cpp
-    plugins/PluginDatabase.cpp
-    plugins/PluginData.cpp
     plugins/PluginDebug.cpp
     plugins/PluginMainThreadScheduler.cpp
-    plugins/PluginPackage.cpp
     plugins/PluginStream.cpp
-    plugins/PluginView.cpp
 
     rendering/AutoTableLayout.cpp
     rendering/BidiRun.cpp
@@ -2595,9 +2591,14 @@ endif ()
 if (ENABLE_NETSCAPE_PLUGIN_API)
     list(APPEND WebCore_SOURCES
         plugins/npapi.cpp
+        plugins/PluginData.cpp
+        plugins/PluginDatabase.cpp
+        plugins/PluginPackage.cpp
+        plugins/PluginView.cpp
     )
 else ()
     list(APPEND WebCore_SOURCES
+        plugins/PluginDataNone.cpp
         plugins/PluginPackageNone.cpp
         plugins/PluginViewNone.cpp
     )
