+ Added support for TOUCH_EVENTS. + Set local storage path in WinLauncher - if we don't, javascript doesn't   work, images don't load, etc.

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ tags
 
 # Ignore files installed by WebKitSupportLibrary/WebKitAuxiliaryLibrary
 /WebKitSupportLibrary.zip
+/WebKitLibraries
 /WebKitLibraries/win/Software License Agreement for WebKit Support Libraries.rtf
 /WebKitLibraries/win/WebKitAuxiliaryLibrary.headers
 /WebKitLibraries/win/WebKitAuxiliaryLibraryVersion
