Added DumpRenderTree support with CMake.  Also: + Made using CF optional. + Fixed bug in ImageDiff creating difference image. + Fixed bug in PixelDumpSupportCairo.cpp - images are expected to be 32bpp,   not 24bpp. + Changed DRT file includes to be full path.

--- a/Source/WebKit/win/WebKit.vcproj/WebKitExports.def.in
+++ b/Source/WebKit/win/WebKit.vcproj/WebKitExports.def.in
@@ -463,3 +463,94 @@ EXPORTS
         ?nearest@TimeRanges@WebCore@@QBENN@Z
         ?add@TimeRanges@WebCore@@QAEXNN@Z
 #endif
+
+        ; Additional Re-exports for DumpRenderTree.exe:
+        WTFCrash
+        WTFReportArgumentAssertionFailure
+        WTFReportAssertionFailure
+        WTFReportError
+        WTFSetCrashHook
+        ??0JSLockHolder@JSC@@QAE@PAVExecState@1@@Z
+        ??0LayoutUnit@WebCore@@QAE@H@Z
+        ??0Structure@JSC@@AAE@AAVVM@1@PAVJSGlobalObject@1@VJSValue@1@ABVTypeInfo@1@PBUClassInfo@1@EI@Z
+        ??1JSLockHolder@JSC@@QAE@XZ
+        ??1WeakHandleOwner@JSC@@UAE@XZ
+        ?addPropertyTransition@Structure@JSC@@SAPAV12@AAVVM@2@PAV12@VPropertyName@2@IPAVJSCell@2@AAH@Z
+        ?addPropertyTransitionToExistingStructure@Structure@JSC@@SAPAV12@PAV12@VPropertyName@2@IPAVJSCell@2@AAH@Z
+        ?addPropertyWithoutTransition@Structure@JSC@@QAEHAAVVM@2@VPropertyName@2@IPAVJSCell@2@@Z
+        ?addSlowCase@Identifier@JSC@@CA?AV?$PassRefPtr@VStringImpl@WTF@@@WTF@@PAVExecState@2@PAVStringImpl@4@@Z
+        ?allocateSlowCase@MarkedAllocator@JSC@@AAEPAXI@Z
+        ?append@StringBuilder@WTF@@QAEXPBEI@Z
+        ?appendNumber@StringBuilder@WTF@@QAEXH@Z
+        ?checkCurrentIdentifierTable@Identifier@JSC@@CAXPAVExecState@2@@Z
+        ?className@JSObject@JSC@@SA?AVString@WTF@@PBV12@@Z
+        ?convertDoubleToContiguousWhilePerformingSetIndex@JSObject@JSC@@AAEXAAVVM@2@IVJSValue@2@@Z
+        ?convertInt32ToDoubleOrContiguousWhilePerformingSetIndex@JSObject@JSC@@AAEXAAVVM@2@IVJSValue@2@@Z
+        ?copyBackingStore@JSObject@JSC@@SAXPAVJSCell@2@AAVCopyVisitor@2@@Z
+        ?createNotEnoughArgumentsError@JSC@@YAPAVJSObject@1@PAVExecState@1@@Z
+        ?createSingleCharacterString@SmallStrings@JSC@@AAEXPAVVM@2@E@Z
+        ?createTable@HashTable@JSC@@ABEXPAVVM@2@@Z
+        ?currentTime@WTF@@YANXZ
+        ?customHasInstance@JSCell@JSC@@KA_NPAVJSObject@2@PAVExecState@2@VJSValue@2@@Z
+        ?defaultValue@JSObject@JSC@@SA?AVJSValue@2@PBV12@PAVExecState@2@W4PreferredPrimitiveType@2@@Z
+        ?defineOwnProperty@JSObject@JSC@@SA_NPAV12@PAVExecState@2@VPropertyName@2@AAVPropertyDescriptor@2@_N@Z
+        ?deleteProperty@JSObject@JSC@@SA_NPAVJSCell@2@PAVExecState@2@VPropertyName@2@@Z
+        ?deletePropertyByIndex@JSObject@JSC@@SA_NPAVJSCell@2@PAVExecState@2@I@Z
+        ?despecifyDictionaryFunction@Structure@JSC@@QAEXAAVVM@2@VPropertyName@2@@Z
+        ?despecifyFunctionTransition@Structure@JSC@@SAPAV12@AAVVM@2@PAV12@VPropertyName@2@@Z
+        ?destroy@JSCell@JSC@@KAXPAV12@@Z
+        ?empty@StringImpl@WTF@@SAPAV12@XZ
+        ?fastMallocGoodSize@WTF@@YAII@Z
+        ?fastMallocStatistics@WTF@@YA?AUFastMallocStatistics@1@XZ
+        ?fastRealloc@WTF@@YAPAXPAXI@Z
+        ?fillGetterPropertySlot@JSObject@JSC@@AAEXAAVPropertySlot@2@H@Z
+        ?finalize@WeakHandleOwner@JSC@@UAEXV?$Handle@W4Unknown@JSC@@@2@PAX@Z
+        ?findAllocator@WeakSet@JSC@@AAEPAUFreeCell@WeakBlock@2@XZ
+        ?from@Identifier@JSC@@SA?AV12@PAVExecState@2@I@Z
+        ?functionGetter@PropertySlot@JSC@@ABE?AVJSValue@2@PAVExecState@2@@Z
+        ?get@Structure@JSC@@QAEHAAVVM@2@VPropertyName@2@AAIAAPAVJSCell@2@@Z
+        ?getCallableObjectSlow@JSC@@YAPAVJSCell@1@PAV21@@Z
+        ?getCallData@JSCell@JSC@@SA?AW4CallType@2@PAV12@AATCallData@2@@Z
+        ?getConstructData@JSCell@JSC@@SA?AW4ConstructType@2@PAV12@AATConstructData@2@@Z
+        ?getObject@JSCell@JSC@@QAEPAVJSObject@2@XZ
+        ?getOwnPropertyDescriptor@JSObject@JSC@@SA_NPAV12@PAVExecState@2@VPropertyName@2@AAVPropertyDescriptor@2@@Z
+        ?getOwnPropertyNames@JSObject@JSC@@SAXPAV12@PAVExecState@2@AAVPropertyNameArray@2@W4EnumerationMode@2@@Z
+        ?getOwnPropertySlotSlow@JSObject@JSC@@AAE_NPAVExecState@2@VPropertyName@2@AAVPropertySlot@2@@Z
+        ?getOwnPropertySlotByIndex@JSObject@JSC@@SA_NPAVJSCell@2@PAVExecState@2@IAAVPropertySlot@2@@Z
+        ?getOwnNonIndexPropertyNames@JSObject@JSC@@SAXPAV12@PAVExecState@2@AAVPropertyNameArray@2@W4EnumerationMode@2@@Z
+        ?getPropertyNames@JSObject@JSC@@SAXPAV12@PAVExecState@2@AAVPropertyNameArray@2@W4EnumerationMode@2@@Z
+        ?growOutOfLineStorage@JSObject@JSC@@QAEPAVButterfly@2@AAVVM@2@II@Z
+        ?isLangAttributeAwareFormControlUIEnabled@RuntimeEnabledFeatures@WebCore@@0_NA
+        ?isReachableFromOpaqueRoots@WeakHandleOwner@JSC@@UAE_NV?$Handle@W4Unknown@JSC@@@2@PAXAAVSlotVisitor@2@@Z
+        ?isValidAllocation@Heap@JSC@@AAE_NI@Z
+        ?materializePropertyMap@Structure@JSC@@AAEXAAVVM@2@@Z
+        ?nullptr@@3Vnullptr_t@std@@A
+        ?put@JSObject@JSC@@SAXPAVJSCell@2@PAVExecState@2@VPropertyName@2@VJSValue@2@AAVPutPropertySlot@2@@Z
+        ?putByIndex@JSObject@JSC@@SAXPAVJSCell@2@PAVExecState@2@IVJSValue@2@_N@Z
+        ?putDirectVirtual@JSObject@JSC@@SAXPAV12@PAVExecState@2@VPropertyName@2@VJSValue@2@I@Z
+        ?reifyString@StringBuilder@WTF@@ABEXXZ
+        ?reportExtraMemoryCostSlowCase@Heap@JSC@@AAEXI@Z
+        ?resolveRope@JSRopeString@JSC@@ABEXPAVExecState@2@@Z
+        ?s_info@JSDOMGlobalObject@WebCore@@2UClassInfo@JSC@@B
+        ?s_info@JSNode@WebCore@@2UClassInfo@JSC@@B
+        ?setDescriptor@PropertyDescriptor@JSC@@QAEXVJSValue@2@I@Z
+        ?setIndexQuicklyToUndecided@JSObject@JSC@@AAEXAAVVM@2@IVJSValue@2@@Z
+        ?setUpStaticFunctionSlot@JSC@@YA_NPAVExecState@1@PBVHashEntry@1@PAVJSObject@1@VPropertyName@1@AAVPropertySlot@1@@Z
+        ?shrinkToFit@StringBuilder@WTF@@QAEXXZ
+        ?slowAppend@MarkedArgumentBuffer@JSC@@AAEXVJSValue@2@@Z
+        ?slowValidateCell@JSC@@YAXPAVJSCell@1@@Z
+        ?suggestedNewOutOfLineStorageCapacity@Structure@JSC@@QAEIXZ
+        ?throwError@JSC@@YA?AVJSValue@1@PAVExecState@1@V21@@Z
+        ?throwTypeError@JSC@@YAPAVJSObject@1@PAVExecState@1@@Z
+        ?throwTypeError@JSC@@YAPAVJSObject@1@PAVExecState@1@ABVString@WTF@@@Z
+        ?toBoolean@JSString@JSC@@QBE_NXZ
+        ?toInt32@JSC@@YAHN@Z
+        ?toNumberSlowCase@JSValue@JSC@@ABENPAVExecState@2@@Z
+        ?toStringSlowCase@JSValue@JSC@@ABEPAVJSString@2@PAVExecState@2@@Z
+        ?toThisObject@JSObject@JSC@@SAPAV12@PAVJSCell@2@PAVExecState@2@@Z
+        ?tryAllocateSlowCase@CopiedSpace@JSC@@AAE?AVCheckedBoolean@@IPAPAX@Z
+        ?tryFastCalloc@WTF@@YA?AUTryMallocReturnValue@1@II@Z
+        ?tryFastMalloc@WTF@@YA?AUTryMallocReturnValue@1@I@Z
+        ?updateIndexingType@ArrayAllocationProfile@JSC@@QAEXXZ
+        ?visitChildren@JSObject@JSC@@SAXPAVJSCell@2@AAVSlotVisitor@2@@Z
+        ?weakClearSlowCase@JSC@@YAXAAPAVWeakImpl@1@@Z
