--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -23,8 +23,11 @@ elseif ("${PORT}" STREQUAL "WinCE")
     add_subdirectory(WinCELauncher)
 elseif ("${PORT}" STREQUAL "Win")
     add_subdirectory(WinLauncher)
-    if (NOT BUILD_WIN_LAUNCHER_AS_EXE)
-        add_subdirectory(win/DLLLauncher)
+    if (NOT CMAKE_SYSTEM_NAME MATCHES WindowsCE)
+        if (NOT DONT_USE_DLLLAUNCHERS)
+            add_subdirectory(win/DLLLauncher)
+        endif ()
+        add_subdirectory(DumpRenderTree/win)
     endif ()
 endif ()
 
