Created framework for measuring performance with minimal overhead.
Alternative to using web inspector to measure performance.
Enabled under PERFORMANCE_TRACING flag.  If this flag isn't enabled this
code introduces no overhead.  Performance is measured with tags like this:

  PERFORMANCE_START(WTF::PerformanceTrace::ExecuteJavaScript, L"Script");
  JSValue returnValue = JSMainThreadExecState::evaluate(exec, jsSourceCode, shell, &evaluationException);
  InspectorInstrumentation::didEvaluateScript(cookie);
  PERFORMANCE_END(WTF::PerformanceTrace::ExecuteJavaScript);

Client can set output handler which is either invoked automatically when
the buffer is full or is invoked when the client calls WTF::PerformanceTrace::dumpEvents().

--- a/Source/WTF/wtf/CMakeLists.txt
+++ b/Source/WTF/wtf/CMakeLists.txt
@@ -73,6 +73,7 @@ set(WTF_HEADERS
     ParallelJobsGeneric.h
     ParallelJobsLibdispatch.h
     ParallelJobsOpenMP.h
+    PerformanceTrace.h
     Platform.h
     PossiblyNull.h
     PrintStream.h
@@ -169,6 +170,7 @@ set(WTF_SOURCES
     PageAllocationAligned.cpp
     PageBlock.cpp
     ParallelJobsGeneric.cpp
+    PerformanceTrace.cpp
     PrintStream.cpp
     RandomNumber.cpp
     RefCountedLeakCounter.cpp
