--- a/Source/WebKit/win/WebKit.vcproj/WebKitExports.def.in
+++ b/Source/WebKit/win/WebKit.vcproj/WebKitExports.def.in
@@ -558,7 +558,7 @@ EXPORTS
 #endif
 #if ENABLE(PERFORMANCE_TRACING)
         ?dumpEvents@PerformanceTrace@WTF@@SAXXZ
-        ?end@PerformanceTrace@WTF@@SAXW4Event@12@@Z
+        ?end@PerformanceTrace@WTF@@SAXW4Event@12@PBD@Z
         ?start@PerformanceTrace@WTF@@SAXW4Event@12@PBD@Z
         ?setOutputHandler@PerformanceTrace@WTF@@SAXP6AXHNNW4Event@12@PBD@Z@Z
         ?enable@PerformanceTrace@WTF@@SAX_N@Z
