Add SIMULATED_GESTURES support (pan scrolling)
+ Added PlatformGestureSupport.h.  In this file you define which
  gesture model you want to use - XP or CE, and if you want to use
  SIMULATED_GESTURES.
+ Added DefWindowProc.cpp, which overrides the standard default window
  proc.  This is where gesture recognition (SIMULATED_GESTURES) is
  implemented.  Gestures support is simulated with mouse events.
  Currently GID_PAN and GID_SCROLL are simulated.
  PAN_THRESHOLD configures the minimum distance to move
  to start a pan gesture.
+ With drag and drop enabled, handleMouseDraggedEvent needs to return
  true (indicating it handled the event) only when the event could start
  a drag / did do a drag / or a selection has been made.  If the event
  is handled DefWinProc isn't invoked and the gesture recognizer can't
  determine when the mouse move event should be allowed to start a
  gesture.
+ Autoscroll is only started once a selection has been made.  (Otherwise
  autoscroll will conflict with the gesture recognizer).
+ WebView.cpp - added support for SIMULATED_GESTURES, XP_GESTURE_MODEL,
  CE_GESTURE_MODEL.  Added method 'gestureInfoAtPoint', which
  'gestureNotify' uses; also 'gesture' uses this for CE_GESTURE_MODEL.

--- a/Source/WTF/wtf/CMakeLists.txt
+++ b/Source/WTF/wtf/CMakeLists.txt
@@ -42,6 +42,7 @@ set(WTF_HEADERS
     HexNumber.h
     ListHashSet.h
     Locker.h
+    LRUPriorityQueue.h
     MD5.h
     MainThread.h
     MathExtras.h
