Add flick (velocity) support to native scrolling
WebView.cpp:
+ This implementation is modeled on the Chromium implementation.
  WebView is a PlatformGestureCurveTarget.  It has an
  ActivePlatformGestureAnimation (which is a TouchpadFlingGesture)
  and a gesture animation timer.
+ Removed overpan feedback; it will come in a future commit in a
  different way.

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -2615,7 +2615,9 @@ endif ()
 
 if (ENABLE_SMOOTH_SCROLLING)
     list(APPEND WebCore_SOURCES
+        platform/ActivePlatformGestureAnimation.cpp
         platform/ScrollAnimatorNone.cpp
+        platform/TouchpadFlingPlatformGestureCurve.cpp
     )
 endif ()
 
